# Learning-Middleware

./: .dockerignore  .env.build  .gitignore  CHAT_FEEDBACK_GUIDE.md  CORS_FIX_GUIDE.md  COURSE_CREATION_INTEGRATION.md  DOCKER_GUIDE.md  DOCKER_SETUP_GUIDE.md  FEEDBACK_SYSTEM_TESTING_GUIDE.md  FEEDBACK_TESTING_GUIDE.md  FIXES_APPLIED.md  INSTRUCTOR_AUTH_QUICKSTART.md  LEARNER_MODULE_FLOW_GUIDE.md  LEARNING_PREFERENCES_IMPLEMENTATION.md  MODULE_LEARNING_FLOW_IMPLEMENTATION.md  OPERATIONS.md  README.md  UI_ENHANCEMENTS_IMPLEMENTATION_SUMMARY.md  UI_ENHANCEMENTS_SUMMARY.md  build.sh  check_health.sh  docker-compose.dev.yml  docker-compose.yml  docker-dev-prod-guide.md  fix_cors.sh  test_chat_logging.sh  test_feedback.sh
database/: backup_interactions.sh  init.sql
instructor/: .dockerignore  Dockerfile  Dockerfile.dev  config.py  crud.py  kli_client.py  logging_config.py  main.py  models.py  requirements.txt  routes.py  schemas.py  sme_client.py
kli_sme/: Dockerfile  Dockerfile.dev  config.yaml  kli-sme_agent_system_8865ac57.plan.md  llm.py  lo_generator.py  main.py  personalise.py  prompts.py  pyproject.toml  requirements.txt  retrieval.py  schemas.py  test_golden_sample.py
kli_sme/graphs/: golden_sample.py  lo_graph.py  personalizer.py  quiz_graph.py
kli_sme/output/: compression_hash_functions_20260307-131316_meta.json  compression_hash_functions_20260307-131316_personalized.md  golden_SE101_20260307-000019.md  golden_SE101_20260307-000019_meta.json
learner-orchestrator/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.yml  main.py  requirements.txt  (+1 more)
(+154 files in other folders)
